[package]
name = "grdn"
version = "0.0.1"
edition = "2021"
description = "The canonical TypeScript and JavaScript implementation of the `grdn` protocol"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
license = "BlueOak-1.0.0"
readme = "../README.md"
repository = "https://github.com/chriskrycho/grdn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ]}
